--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,129 @@
   --ifm-color-primary-lightest: #facafa;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+li > a.menu__link {
+  justify-content: flex-start;
+}
+
+.slack a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-slack.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.pagerduty a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-pagerduty.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.datadog a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-datadog-dark.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+html[data-theme="dark"] .datadog a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-datadog-light.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+
+.opsgenie a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-opsgenie.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.coralogix a::before {
+  content: ' ';
+  margin-right: 0.5rem;
+  background-color: #3dc48f;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  display: inline-block;
+}
+
+.github a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-github-dark.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+html[data-theme="dark"] .github a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-github-light.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.notion a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-notion-dark.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.jira a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-jira.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.confluence a::before {
+  content: ' ';
+  padding-right: 0.5rem;
+  background: url(../../static/img/logos/logo-confluence.png) no-repeat;
+  background-size: contain;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
+
+.mongodb a::before {
+  content: ' ';
+  margin-right: 0.5rem;
+  background: url(../../static/img/logos/logo-mongodb.png) no-repeat;
+  background-size: contain;
+  background-position: center;
+  height: 16px;
+  width: 16px;
+  display: inline-block;
+}
