--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,26 +6,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #7213FF;
-  --ifm-color-primary-dark: #9A3FFF;
-  --ifm-color-primary-darker: #C062FF;
-  --ifm-color-primary-darkest: #E684FF;
-  --ifm-color-primary-light: #FFA6FF;
-  --ifm-color-primary-lighter: #f8b3f8;
-  --ifm-color-primary-lightest: #ffb7ff;
+  --ifm-color-primary: #FF7700;
+  --ifm-color-primary-dark: #241c38;
+  --ifm-color-primary-darker: #1d162e;
+  --ifm-color-primary-darkest: #100b1a;
+  --ifm-color-primary-light: #E04D01;
+  --ifm-color-primary-lighter: #FF7700;
+  --ifm-color-primary-lightest: #ed7207;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #9757f7;
-  --ifm-color-primary-dark: #AE5FFF;
-  --ifm-color-primary-darker: #CE7BFF;
-  --ifm-color-primary-darkest: #EE98FF;
-  --ifm-color-primary-light: #FFB5FF;
-  --ifm-color-primary-lighter: #fcc0fc;
-  --ifm-color-primary-lightest: #facafa;
+  --ifm-color-primary: #251D3A;
+  --ifm-color-primary-dark: #241c38;
+  --ifm-color-primary-darker: #1d162e;
+  --ifm-color-primary-darkest: #100b1a;
+  --ifm-color-primary-light: #E04D01;
+  --ifm-color-primary-lighter: #FF7700;
+  --ifm-color-primary-lightest: #ed7207;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
